--- a/index3.html
+++ b/index3.html
@@ -12,9 +12,11 @@
 
 <div class="container">
   <h2>Basic Progress Bar</h2>
-  <p>To create a default progress bar, add a .progress class to a container element and add the progress-bar class to its child element. Use the CSS width property to set the width of the progress bar:</p>
+  <p>To create a default progress bar, add a .progress class to a container 
+    element and add the progress-bar class to its child element.
+     Use the CSS width property to set the width of the progress bar:</p>
   <div class="progress">
-    <div class="progress-bar" style="width:70%">70%</div>
+    <div class="progress-bar" style="width:50%">50%</div>
   </div>
 </div>
 
